--- a/homestyle.css
+++ b/homestyle.css
@@ -8,6 +8,9 @@ body {
     font-family: 'Jaldi', sans-serif;
 
 }
+
+
+
 img {
     max-width: 10%;
     position: absolute;
@@ -31,6 +34,47 @@ img {
     transform: translate(-50%, -50%);
     font-size: 2em;
     color: white;
+}
+
+#under{
+    display:inline-block;
+    margin: 0;
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background: gray;
+
+}
+
+h3 {
+    text-align:center;
+    font-family: 'Courier', monospace;
+    display:inline-block;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    font-size: 1.5em;
+    color: white;
+    text-shadow:
+            -1px -1px 0 #000,
+            1px -1px 0 #000,
+            -1px 1px 0 #000,
+            1px 1px 0 #000;
+    padding:5px;
+    border-style: solid;
+    border-radius: 2px;
+}
+h3:hover {
+    text-shadow:
+            -1px -1px 0 #000,
+            1px -1px 0 #000,
+            -2px 2px 0 #000,
+            1px 1px 0 #000;
 }
 
 h1 {
@@ -88,6 +132,7 @@ li {
     display:inline;
     float: left;
 
+
 }
 li a {
     display: block;
@@ -101,7 +146,9 @@ li a {
             2px -2px 0 #000,
             -2px 2px 0 #000,
             2px 2px 0 #000;
+    font-size:1em;
 }
+
 li a:hover {
     font-size: 101%;
     border-bottom:solid;
