--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,12 @@ body {
     background-ms-transform: translate(-50%, -50%);
     background-transform: translate(-50%, -50%);
 
-}
 
+}
+#roll {
+    max-width: 20%;
+    padding-left:38%;
+}
 #container {
     font-family: 'Jaldi', sans-serif;
     position:absolute;
@@ -54,25 +58,14 @@ h1{
     display:inline-block;
     text-align: center;
     margin: 0;
-    width: 100%;
+    width: 99%;
     position: absolute;
     left: 0;
     padding:5px;
     border-radius:10px;
     background-color: rgba(0, 0, 0, .6);
 }
-#ok{
-    text-align: center;
-    margin: 0;
-    min-height: 90%;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    padding:5px;
-    border-radius:10px;
-    z-index: -1;
-    background-color: rgba(0, 0, 0, .7);
-}
+
 h3{
     font-size: 20px;
 }
@@ -145,6 +138,7 @@ nav ul {
 li {
     display:inline;
     float: left;
+    font-family: 'Jaldi', sans-serif;
 
 
 }
