--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url(images/forestblur.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 body {
     background: url(images/forestblur.jpg), center, no-repeat;
     background-size:cover;
