--- a/styles.css
+++ b/styles.css
@@ -194,3 +194,45 @@ a {
     border-color: rgba(0,128,0,1)
 
 }
+
+form {
+    display:inline-block;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    font-family: 'Courier', monospace;
+    display: inline-block;
+    text-align:center;
+    background-color: rgba(0, 0, 0, .7);
+    width:25%;
+    height: 60%;
+}
+
+#contact {
+    font-size:2em;
+    display:inline-block;
+    text-align: center;
+    margin: 0;
+    width: 99%;
+    position: absolute;
+    left: 0;
+    padding:5px;
+    border-radius:10px;
+    background-color: rgba(0, 0, 0, .6);
+    color:white;
+}
+.labels {
+    padding-left:0;
+    display:inline-block;
+}
+#main {
+    font-family: 'Courier', monospace;
+    display: inline-block;
+    background-color:blue;
+}
+
+
+
