--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ body {
 
 
 }
+
 #roll {
     max-width: 20%;
     padding-left:38%;
@@ -209,6 +210,7 @@ form {
     background-color: rgba(0, 0, 0, .7);
     width:25%;
     height: 60%;
+    border-radius:50px;
 }
 
 #contact {
@@ -231,10 +233,26 @@ form {
 #main {
     font-family: 'Courier', monospace;
     display: inline-block;
-    background-color:blue;
 }
 
 input {
     font-family: 'Courier', monospace;
+    border-radius:10px;
+
 
 }
+#message {
+    height: 100px;
+    border-radius:10px;
+}
+.input {
+    height: 20px;
+}
+
+#submit_button {
+    margin:15px;
+    font-family: 'Courier', monospace;
+    display: inline-block;
+    border-radius:10px;
+}
+
